[project]
name = "lance"
version = "0.1.0a0"
description = "Lateral Agentic eNvironment Cloud Exploitation — cloud-native red teaming for deployed agentic AI systems"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Joseph Manzambi" },
]
keywords = [
    "ai-security",
    "red-teaming",
    "agentic-ai",
    "mcp",
    "prompt-injection",
    "cloud-security",
    "aws",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "rich>=13.8",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "boto3>=1.35",
    "ollama>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml",
]

[project.scripts]
lance = "lance.cli:app"

[project.urls]
Homepage = "https://github.com/josephManzambi/lance"
Repository = "https://github.com/josephManzambi/lance"
Issues = "https://github.com/josephManzambi/lance/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lance"]

# -----------------------------------------------------------------------------
# Ruff
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",    # pycodestyle / pyflakes
    "I",              # isort
    "B",              # flake8-bugbear
    "UP",             # pyupgrade
    "N",              # pep8-naming
    "D",              # pydocstyle
    "S",              # flake8-bandit (security)
    "RUF",            # ruff-specific
    "PL",             # pylint subset
    "SIM",            # simplify
    "TID",            # tidy imports
    "PTH",            # use pathlib
]
ignore = [
    "D100",  # missing docstring in public module (we allow it)
    "D104",  # missing docstring in public package
    "D203",  # conflicts with D211
    "D213",  # conflicts with D212
    "PLR0913",  # too many args — common in attack constructors
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "S101", "PLR2004"]  # allow asserts, magic values, no docstrings in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

# -----------------------------------------------------------------------------
# Mypy
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["ollama.*"]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=lance",
    "--cov-report=term-missing",
]
markers = [
    "flaky: attack is not yet stable; excluded from default runs",
    "integration: requires Ollama or external services",
]

[tool.coverage.run]
branch = true
source = ["src/lance"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
